# basketball-stats

./: .gitignore  2000-2015-First-Round.csv_e500_b10_lr0.001.csv  2017-2018 Passing Data.xls  2017-2018 Passing Data.xlsx  LICENSE  Makefile  README.md  analysis.csv  college_predictor.ipynb  games.csv  graph.py  pyproject.toml  regression_model.xlsx  team_misc.csv  team_opponent.csv  team_stats.py
assist-vs-secondary-assist/: input.csv  plot.py
college-predictor/: .Rhistory  2000-2015-First-Round.csv  2004_stats.csv  2005_stats.csv  2015_stats.csv  breast_cancer_k.csv  colege_predictor.Rmd  college_predictor.ipynb  college_stats_1.csv  college_stats_2.csv  data_prep.py  model.1.py  model.ipynb  model.py  scraper.py  tensorflow-model.py  test_stat.csv
college-predictor/data/: 1960-1969.csv  1970-1979.csv  1980-1989.csv  1990-1999.csv  2000-2009-pace.csv  2000-2009.csv  2010-2017-pace.csv  2010-2017.csv  2018-2018-pace.csv
college-predictor/data/working/: 2000-2009-pace-working.csv  2000-2009.csv  2000-2017-pace.csv  2010-2017-pace-working.csv  2018-2018-pace-working.csv
college-predictor/models/: initial_train
college-predictor/results/: 2000-2009.csv_e500_b10_lr0.001.csv  2000-2015-First-Round.csv_e500_b10_lr0.001.csv  events.out.tfevents.1519787446.DESKTOP-SQFSUQV  events.out.tfevents.1520604980.DESKTOP-SQFSUQV
effects-of-stadiums/: effects-of-stadiums.ipynb  graph.py  model.py  read_games.py  team_stats.py
effects-of-stadiums/outputs/: analysis.csv
salary-cap/: scrap-salary.py  scrape-salary.ipynb  scrape-salary.py
salary-cap/inputs/: team.csv
